refactor(layer): group by domain (#1)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=123456
 # 打印 SQL语句, Mapper所处的包
 logging.level.com.ahianzhang.xp.demo.dao=debug
-mybatis.mapper-locations=classpath*:mapper/*.xml
+mybatis.mapper-locations=classpath*:mapper/*/*.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
