--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 # 打印 SQL语句, Mapper所处的包
 logging.level.com.ahianzhang.xp.demo.dao=debug
-mybatis.mapper-locations=classpath*:mapper/*.xml
+mybatis.mapper-locations=classpath*:mapper/*/*.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
