refactor: update comments

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,8 @@
-# driver
+# h2 driver
 spring.datasource.driver-class-name=org.h2.Driver
-# h2
+# url
 spring.datasource.url=jdbc:h2:mem:test
-# init
+# init table
 spring.datasource.schema=classpath:sql/init_table.sql
 spring.datasource.username=sa
 spring.datasource.password=sa
